# rocks

./: .april_first  .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  environment.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: tests.yml
data/: ssoCard_template.json
docs/: appendix.rst  cli.rst  conf.py  core.rst  credit.rst  getting_started.rst  glossary.rst  identify.rst  index.rst  names.rst  properties.rst  ssodnet.rst  tools.rst  tutorials.rst  v2.rst
docs/_build/doctrees/: cli.doctree  environment.pickle  index.doctree  names.doctree  properties.doctree  tools.doctree
docs/_build/html/: .buildinfo  cli.html  core.html  genindex.html  identify.html  index.html  names.html  objects.inv  properties.html  search.html  searchindex.js  tools.html  tutorial.html  tutorials.html
docs/_build/html/_modules/: albedo.html  core.html  index.html  names.html  properties.html  taxonomy.html  tools.html
docs/_build/html/_sources/: cli.rst.txt  core.rst.txt  identify.rst.txt  index.rst.txt  names.rst.txt  properties.rst.txt  tools.rst.txt  tutorial.rst.txt  tutorials.rst.txt
docs/tutorials/: literature.ipynb  rocks_basic_usage.ipynb  rocks_sdss_moc1.ipynb  rocks_sdss_moc1.py
rocks/: __init__.py  albedo.py  bft.py  cache.py  cli.py  config.py  core.py  datacloud.py  definitions.py  index.py  logging.py  metadata.py  names.py  plots.py  properties.py  resolve.py  resolver.py  ssodnet.py  taxonomy.py  tools.py  utils.py
rocks/resolve/: __init__.py  id.py  quaero.py
stubs/: __init__.pyi  cli.pyi  core.pyi  datacloud.pyi  definitions.pyi  plots.pyi  resolve.pyi  ssodnet.pyi  utils.pyi
tests/: check_rocks.py  conftest.py  rocks_test.py  test_bft.py  test_cache.py  test_class.py  test_cli.py  test_core.py  test_datacloud.py  test_identify.py  test_index.py  test_metadata.py  test_names.py  test_properties.py  test_resolve.py  test_resolve_id.py  test_resolve_quaero.py  test_resolver.py  test_ssocards.py  test_ssocards_local.py  test_ssodnet.py  test_tools.py  test_utils.py
