[tool.poetry]
name = "space-rocks"
version = "1.4.10"
description = "Python client for SsODNet data access."
authors = ["Max Mahlke <max.mahlke@oca.eu>"]
license = "MIT"
readme = "README.md"
homepage = "https://rocks.readthedocs.io/en/latest/"
documentation = "https://rocks.readthedocs.io/en/latest/"
repository = "https://github.com/maxmahlke/rocks.git"
packages = [{'include' = 'rocks'}]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
sphinx = {version = "^3", optional = true}
sphinx-redactor-theme = {version = "^0.0.1", optional = true}
sphinx-hoverxref = {version = "*", optional = true}
pydantic = "^1.8.2"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
aiohttp = "^3.7.4"
cchardet = "^2.1.7"
aiodns = "^3.0.0"
pandas = "^1.3.2"
rich = "^10.7.0"
click = "^8.0.1"
nest-asyncio = "^1.5.1"
requests = "^2.26.0"
Levenshtein = "^0.16.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-redactor-theme", "sphinx-hoverxref"]

[tool.poetry.scripts]
rocks = "rocks.cli:cli_rocks"

[tool.poetry.dev-dependencies]
sphinx-redactor-theme = {version = "^0.0.1", optional = true}
sphinx-hoverxref = {version = "*", optional = true}

[tool.pytest.ini_options]
addopts = "-v --cov=rocks --cov-report html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
