[tool.poetry]
name = "space-rocks"
version = "1.9.1"
description = "Python client for SsODNet data access."
authors = ["Max Mahlke <max.mahlke@oca.eu>"]
license = "MIT"
readme = "README.md"
homepage = "https://rocks.readthedocs.io/en/latest/"
documentation = "https://rocks.readthedocs.io/en/latest/"
repository = "https://github.com/maxmahlke/rocks.git"
packages = [{'include' = 'rocks'}]

[tool.poetry.dependencies]
python = ">=3.7.1"
numpy = [
    {version = ">=1.24", python = "^3.11"},
    {version = ">=1.21", python = ">=3.7,<3.11"},
]
matplotlib = ">=3.4.3"
aiohttp = ">=3.8.2"
faust-cchardet = ">=2.1.7"
aiodns = "^3.0.0"
pandas = ">=1.3.5"
pydantic = ">=2.0"
rich = ">=12.2.0"
click = ">=8.1.2"
nest-asyncio = "^1.5.1"
requests = "^2.26.0"
Levenshtein = ">=0.16.0"
platformdirs = "^2.6.2"
rapidfuzz = "^3"

[tool.poetry.extras]
docs = [
  "furo",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-hoverxref",
  "sphinx-redactor-theme",
  "spinx_design"
]

[tool.poetry.scripts]
rocks = "rocks.cli:cli_rocks"

[tool.poetry.dev-dependencies]
sphinx-redactor-theme = {version = "^0.0.1", optional = true}
sphinx-hoverxref = {version = "*", optional = true}
jinja2 = {version = "<3.1", optional = true}
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest-sugar = "^0.9.6"

[tool.pytest.ini_options]
addopts = "-v --cov=rocks --cov-report html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
